apps/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: DEPLOYMENT_NAME
  namespace: NAMESPACE
  labels:
    app: PROJECT
spec:
  selector:
    matchLabels:
      project: PROJECT
  template:
    metadata:
      namespace: NAMESPACE
      labels:
        project: PROJECT
    spec:
      containers:
         - name: PROJECT
           image: REGISTRY_HOSTNAME/PROJECT:TAG_VERSION
           securityContext:
             allowPrivilegeEscalation: false
             runAsNonRoot: true      # опционально, но хорошая практика
             runAsUser: 1000         # опционально
           ports:
             - containerPort: PORT_CONTAINER
